# testlinuxandwindowsbuildpull

./: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  README.md  compile_commands.json  main.cpp  matrixcode.pro  meson.build  win.ini  x86_64-w64-mingw32-g++
.ccls-cache/@@home@jimmy@dev@matrixcode/: @usr@include@GL@gl.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@assert.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@flt-eval-method.h.blob  @usr@include@bits@fp-fast.h.blob  @usr@include@bits@fp-logb.h.blob  @usr@include@bits@iscanonical.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@libm-simd-decl-stubs.h.blob  @usr@include@bits@local_lim.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@math-vector.h.blob  @usr@include@bits@mathcalls-helper-functions.h.blob  @usr@include@bits@mathcalls-narrow.h.blob  @usr@include@bits@mathcalls.h.blob  @usr@include@bits@posix1_lim.h.blob  @usr@include@bits@sched.h.blob  (+382 more)
bbuild/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  libGLdispatch.so.0  libQt5OpenGL.so.5  libbz2.so.1  libc.so.6  libgcc_s.so.1  libgraphite2.so.3  libpcre2-16.so.0  libpng16.so.16  libstdc++.so.6  libz.so.1  matrixcode  mfdl.sh
release/: moc_matrixcode.cpp  moc_predefs.h
(+15 files in other folders)
